[package]
name = "lammes_automata_theory_exposer_http"
version = "0.1.0"
authors = ["simon-lammes <simon.lammes@cofinpro.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lammes_automata_theory = { path = "../lammes_automata_theory" }
jsonrpc-core = "14.2.0"
jsonrpc-http-server = "14.2.0"
jsonrpc-derive = "14.2.1"
jsonrpc-core-client = "14.2.0"
